package com.smboutique.api.model;

public enum DepenseStatus {
    EN_ATTENTE,
    VALIDEE,
    REJETEE,
    ANNULEE
}
